Fixed some spacing issues for titles.

--- a/_scss/_blog.scss
+++ b/_scss/_blog.scss
@@ -3,4 +3,6 @@
   font-size: var(--title-font-size-lg);
   font-weight: lighter;
   text-transform: uppercase;
+  margin-left: 25%;
+  padding: 20px;
 }
