--- a/_scss/_home.scss
+++ b/_scss/_home.scss
@@ -20,7 +20,7 @@
   padding: 20px;
 }
 
-.blog {
+.blog-entry {
   margin-left: 25%;
   margin-right: 25%;
   padding: 20px;
